# VoicevoxCoreSharp

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .pinact.yaml  LICENSE  Makefile  README.md  VERSIONS.md  VoicevoxCoreSharp-without-exmaples.slnf  VoicevoxCoreSharp.sln  VoicevoxCoreSharp.slnx
.github/: CODEOWNERS  act.mk  dependabot.yml
.github/fixtures/: merge-queue-trigger-handler-event-sample.json
.github/workflows/: csharp_test.yml  dependabot-auto-merge.yml  dependabot-submodule-handler.yml  merge-queue-trigger-handler.yml  publish.yml  submodule_tracker.yml  tagged_release_test.yml  testing-queue.yml
binding/: .gitignore  Cargo.toml  Makefile  build.rs
development/: Dockerfile.linux-local
examples/MAUI/: .gitignore  App.xaml.cs  AppShell.xaml  AppShell.xaml.cs  Directory.Build.props  Env.props.template  MAUI.csproj  MainPage.xaml  MainPage.xaml.cs  MainPageViewModel.cs  Makefile  MauiProgram.cs  README.md
examples/UnitySample/: .gitignore  README.md
examples/cli/: .gitignore  Makefile  Program.cs  README.md  cli.csproj
scripts/: init.sh  pre-commit.py
src/VoicevoxCoreSharp.Core/: NativeUuid.cs  OpenJtalk.cs  Synthesizer.cs  UserDict.cs  Utils.cs  VoiceModel.cs  VoiceModelId.cs  VoicevoxCoreSharp.Core.Metas.props  VoicevoxCoreSharp.Core.csproj
src/VoicevoxCoreSharp.Core.Unity/: .gitignore  VoicevoxCoreSharp.Core.Unity.asmdef  package.json
src/VoicevoxCoreSharp.Experimental/: OnnxruntimeExtensions.cs  (+6 more)
src/VoicevoxCoreSharp.Experimental.SourceGenerator/: NonBlockingGenerator.cs  VoicevoxCoreSharp.Experimental.SourceGenerator.csproj
(+52 files in other folders)
