[package]
name = "binding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
csbindgen = { git = "https://github.com/yamachu/csbindgen", rev = "b68f476daf213f90b324bdfa11a850810ea46861" }  # "1.7.5"
bindgen = "0.64.0"
# glob = "0.3.1"
